apps/signups/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rigel-signups
  namespace: default
spec:
  selector:
    app: rigel-signups
  ports:
    - port: 80
      targetPort: 8080
