apps/signups/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rigel-signups
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.rigel.run
      secretName: rigel-signups-tls
  rules:
    - host: api.rigel.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rigel-signups
                port:
                  number: 80
